# ecs-framework

./: .all-contributorsrc  .coderabbit.yaml  .commitlintrc.json  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .npmignore  .nxignore  .prettierignore  .prettierrc  .releaserc.json  .size-limit.json  CLAUDE.md  COCOS_USAGE.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  api-documenter.json  api-extractor.core.json  api-extractor.math.json  api-extractor.network-shared.json  benchmark.js  codecov.yml  eslint.config.mjs  jest.config.js  jest.performance.config.js  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json  (+2 more)
.claude/: settings.local.json
.fleet/: settings.json
.github/: FUNDING.yml  dependabot.yml  labeler.yml  labels.yml
demo/: egretProperties.json  index.html  manifest.json  tsconfig.json
demo_fgui/: demo_fgui.fairy
docs/: beginner-tutorials.md  bitmask-guide.md  changelog.md  collision.md  component-design-guide.md  concepts-explained.md  contributing.md  core-concepts.md  coroutine.md  create_entity_component.md  emitter.md  entity-guide.md  entity-manager-example.md  event-system-example.md  getting-started.md  getting_start.md  index.md  performance-optimization.md  performance.md  physics.md  query-system-usage.md  render.md  scene-management-guide.md  time.md  (+6 more)
source/src/wasm/rust-ecs-core/: Cargo.toml  build-wasm.bat  build.bat  build.sh
source/src/wasm/rust-ecs-core/src/: lib.rs  query.rs
(+4037 files in other folders)
