[package]
name = "ecs-wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
serde = { version = "*", features = ["derive"] }
serde-wasm-bindgen = "*"

# 高性能哈希表，避免getrandom版本冲突
ahash = "*"
# 使用标准库的HashMap，避免getrandom版本冲突
smallvec = "*"  # 栈分配的小向量
# 为 WASM 环境配置 getrandom
getrandom = { version = "*", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
# 优化WASM二进制大小和性能
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# 配置 wasm-pack 行为
[package.metadata.wasm-pack.profile.release]
# 如果下载失败，可以暂时禁用 wasm-opt 优化
wasm-opt = false
# 或者指定本地 wasm-opt 路径（如果已安装）
# wasm-opt = ["-O4", "--enable-simd"]

# 配置网络超时和重试
[package.metadata.wasm-pack]
# 增加下载超时时间
timeout = 300 